--- a/config.json
+++ b/config.json
@@ -13,16 +13,16 @@
     "eventDisabled": [
         "join.js"
     ],
-    "EMAIL": "kicigo3882@cansku.com",
-    "PASSWORD": "RJ07ZAINA",
+    "EMAIL": "rajuji6670gmail.com",
+    "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": " ✦🌎𝐏𝐑𝐈𝐍𝐂𝐄🌎🦋🎀:-)──➣✦🍒",
+    "BOTNAME": " ✦🌎AARIZ🌎🦋🎀:-)──➣✦🍒",
     "PREFIX": ".",
     "ADMINBOT": [
-        "61560621821421"
+        "61579143489745"
     ],
     "NDH": [
-        "61560621821421"
+        "61579143489745"
     ],
     "DATABASE": {
         "sqlite": {
